--- a/_config.yml
+++ b/_config.yml
@@ -4,17 +4,17 @@
 # ---------------------------------------------------------------
 
 # Site
-title: JusticeHui가 PS하는 블로그
+title: 비닐영양제
 subtitle:
 description:
-author: JusticeHui
+author: ventvinyl
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: ko
 date_format: '%Y-%m-%d'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com' and baseurl as '/child'
-url: 'https://justiceHui.github.io'
+url: 'https://ventvinyl.github.io'
 baseurl: '/'
 permalink: pretty
 timezone:
