--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # ---------------------------------------------------------------
 
 # Site
-title: 비닐영양제
+title: ventvinyl이 하는 블로그
 subtitle:
 description:
 author: ventvinyl
