--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,6 @@ menu:
   #categories: /categories/
   tags: /tags/
   categories: /navigator/
-  teach: /teach/
   #sitemap: /menual/
   #commonweal: /404.html
 
@@ -382,7 +381,7 @@ han: false
 # Disqus
 disqus:
   enable: false
-  shortname: justiceHui
+  shortname: vinyl
   count: true
   # hide comments (visitors need to click to load the comments)
   # count need to be false when hide is true
